[package]
name = "posthog-rs"
license = "MIT"
version = "0.3.7"
authors = ["christos <christos@openquery.io>", "olly <oliver@posthog.com>"]
description = "The official Rust client for Posthog (https://posthog.com/)."
repository = "https://github.com/posthog/posthog-rs"
edition = "2018"
rust-version = "1.78.0"

[dependencies]
reqwest = { version = "0.11.3", default-features = false, features = [
    "rustls-tls",
    "blocking",
] }
serde = { version = "1.0.125", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = "1.0.64"
semver = "1.0.24"
derive_builder = "0.20.2"
uuid = { version = "1.13.2", features = ["serde", "v7"] }

[dev-dependencies]
dotenv = "0.15.0"
ctor = "0.1.26"

[features]
default = ["async-client"]
e2e-test = []
async-client = []
rig-integration = []
