[package]
name = "posthog-rs"
license = "MIT"
version = "0.4.1"
authors = ["christos <christos@openquery.io>", "olly <oliver@posthog.com>"]
description = "The official Rust client for Posthog (https://posthog.com/)."
repository = "https://github.com/posthog/posthog-rs"
edition = "2018"
rust-version = "1.78.0"

[dependencies]
reqwest = { version = "0.11.3", default-features = false, features = [
    "blocking",
    "json",
    "gzip",
] }
serde = { version = "1.0.125", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = "1.0.64"
semver = "1.0.24"
derive_builder = "0.20.2"
uuid = { version = "1.13.2", features = ["serde", "v7"] }
sha1 = "0.10"
regex = "1.10"
tracing = "0.1"
tokio = { version = "1", features = [
    "rt",
    "sync",
    "time",
    "macros",
], optional = true }

[dev-dependencies]
dotenv = "0.15.0"
ctor = "0.1.26"
tokio = { version = "1", features = ["full"] }
httpmock = "0.7"
serde_json = "1.0"
futures = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["async-client", "rustls-tls"]
e2e-test = []
async-client = ["tokio"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
