[package]
name = "posthog-rs"
license = "MIT"
version = "0.3.5"
authors = ["christos <christos@openquery.io>"]
description = "An unofficial Rust client for Posthog (https://posthog.com/)."
repository = "https://github.com/openquery-io/posthog-rs"
edition = "2018"
rust-version = "1.78.0"

[dependencies]
reqwest = { version = "0.13.2", default-features = false, features = [
    "rustls",
    "blocking",
] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
serde_json = "1.0.149"
semver = "1.0.28"
derive_builder = "0.20.2"
uuid = { version = "1.23.1", features = ["serde", "v7"] }

[dev-dependencies]
dotenv = "0.15.0"
ctor = "0.10.1"

[features]
default = ["async-client"]
e2e-test = []
async-client = []
