[package]
name = "async-posthog"
license = "MIT"
version = "0.2.3"
description = "An unofficial Rust client for Posthog (https://posthog.com/)."
repository = "https://github.com/openquery-io/posthog-rs"
edition = "2021"

[dependencies]
posthog-core = { path = "../core" }
reqwest = { version = "0.11.3", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.38"
