[package]
name = "posthog-rs"
license = "MIT"
version = "0.2.3"
authors = ["christos <christos@openquery.io>"]
description = "An unofficial Rust client for Posthog (https://posthog.com/)."
repository = "https://github.com/openquery-io/posthog-rs"
edition = "2021"

[dependencies]
posthog-core = { path = "../core" }
reqwest = { version = "0.11.3", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.38"
