[package]
name = "sdk-adapter"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
posthog-rs = { path = "../..", features = ["async-client"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
chrono = "0.4"
